--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,1 +1,40 @@
-
+// ion-content{
+//     --background: url('../assets/bg.JPG') no-repeat 100% 100%;
+// }
+input {
+    width: 100%;
+     height: 30px;
+}
+form-group{
+    width: 100%;
+    padding: 0;
+    margin : 0;
+}
+form-control{
+    width: 100%;
+    padding: 0;
+    margin: 0;  
+}
+agm-map {
+    margin-top: 0;
+    padding: 0;
+    height: calc(100vh - 121px);      
+     margin-left: 0;
+     margin-right: 0;
+    width: 100%;
+    
+}
+ion-grid {
+    margin: 0;
+    padding: 0;
+}
+ion-button {
+    width: 100%;
+    height: 35px;
+}
+// ion-content {
+//     margin: 0;
+//     padding: 0;
+//     width: 100%;
+//     // height: calc(100vh - 56px);  
+// }
